finally getting somewhere

--- a/webpage/src/App.css
+++ b/webpage/src/App.css
@@ -18,7 +18,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #000;
+  opacity: 1;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
